--- a/src/titlescreen.tex
+++ b/src/titlescreen.tex
@@ -1045,7 +1045,7 @@ are finally revealed.
     \foreach \l in {59, 61, ..., 70}
     {
       \begin{subfigure}{0.3\textwidth}
-      \includegraphics[width=4cm]{titlescreen/title\l.png}%
+        \frame{\includegraphics[width=4cm]{titlescreen/title\l.png}}%
       \end{subfigure}
     }%
 \caption{The title text is finally revealed}
