--- a/src/disassembly.tex
+++ b/src/disassembly.tex
@@ -1,4 +1,5 @@
 \chapter{Some Disassembly Required} 
+\label{sec:disassembly}
 \lstset{style=6502Style}
 
 We've reached the point where the game has started to execute. We just saw a snippet of code that turned off the
@@ -210,7 +211,7 @@ LDA #$00
 STA $0318    ;Non-Maskable Interrupt%\index{Interrupt}%
 \end{lstlisting}
 
-\subsection{Important Concept Number One: High Bytes and Low Bytes}
+\section{Important Concept Number One: High Bytes and Low Bytes}
 On the face of it these four instructions are doing something very simple. They are storing the value \$40
 at address \$0319 and the value \$00 at \$0318. What they are actually doing is storing the address \$4000
 in a place where the C64's 6502 CPU will be expected to look in a moment's time and take that as a command
@@ -258,7 +259,7 @@ seem strange and maybe even wasteful. Seeing the many uses it is put to in the I
 you otherwise, but hopefully when we look at the use it is put to here you may begin to get a flavor of its
 utility. Let's do that by looking at our second important concept.
 
-\subsection{Important Concept Number Two: Interrupts}
+\section{Important Concept Number Two: Interrupts}
 \begin{lstlisting}[caption=It's an interrupt\index{interrupt}. And it's non-maskable.,escapechar=\%]
 LDA #$40
 STA $0319    ;Non-Maskable Interrupt%\index{Interrupt}%
