--- a/src/mif.tex
+++ b/src/mif.tex
@@ -109,7 +109,7 @@ and C64 keyboard\index{keyboard} layouts: the 'm' and 'n' keys each bear the pad
 }
 \end{figure}
 
-\subsubsection{Main Loop}
+\section{Main Loop}
 The code for MIF comes in at a relatively light 900 or so lines of 6502
 assembler. The main loop of the game is primarily concerned with detecting key
 presses to enter into the DNA mini-game (see
@@ -190,7 +190,7 @@ PerformGamePlayUpdates
     JMP $EA31
 \end{lstlisting}
 
-\subsubsection{A Target Explodes}
+\section{A Target Explodes}
 One point of interest in this mini-game is the explosion when you finally overcome the
 frustrating controls and manage to strike the target with your snake.
 \begin{figure}[H]
