--- a/src/preface.tex
+++ b/src/preface.tex
@@ -2,7 +2,7 @@
 This book describes the inner workings of a relatively obscure video game created
 by an eccentric Englishman by the name of Jeff Minter in 1986 for the Commodore 64.
 
-If you are curious about old computers such as the Commodore 64 or the detailed mechanics
+If you are curious about old computers or the detailed mechanics
 of making a glorified digital breadboard produce something on a screen\index{screen} that flashes, bleeps,
 and fascinates then this book is hopefully for you. Iridis Alpha was not an enormous success on its release
 but it is widely regarded as one of the great achievements on the Commodore 64 hardware. It embodies an 8-bit arcade aesthetic that was
@@ -25,8 +25,8 @@ Jeff Minter designed its core engine.
 
 I dedicate a full chapter \hyperref[sec:first16]{\textcolor{blue}{A Hundred Thousand Billion Theme Tunes}} to the ingenious procedural\index{procedural} programming behind Iridis Alpha's theme
 tunes and trace its inspiration back to an article 'Musical Fractals' in a 1986 issue of Byte magazine. \hyperref[sec:torusmusic]{\textcolor{blue}{Another 16\textsuperscript{4} Tunes}} looks
-at the early expermentiations with this fractal music in the demo 'Torus' Minter released while developing the game. \hyperref[sec:torus]{\textcolor{blue}{An Oscillator in 4 Parts}} delves
-into the animation\index{animation} experiment in 'Torus', something that was used in the bonus screen\index{screen} in Iridis Alpha itself.
+at the early expermentiations with this fractal music in the demo program 'Torus' that Minter released while developing the gamed. It also delves
+into the animation\index{animation} experiment it contains, something that was used in the bonus screen\index{screen} in Iridis Alpha itself.
 
 Iridis Alpha is full of little additional extras. \hyperref[sec:bonus]{\textcolor{blue}{Congoatulations Hotshot!}} unpacks the vertical
 scrolling mini-game Minter inserted as a bonus sequence\index{sequence}. Even if the game itself is a little half-baked this bonus sequence\index{sequence} is full of intrepid effects and some clever techniques
@@ -49,7 +49,7 @@ You should find that it matches exactly the snippets of code provided in the boo
 and reformatted for brevity.
 
 
-Rob Hogan \href{https://mastodon.social/@mwenge}{\textcolor{blue}{@mwenge}}\\
+\href{https://mastodon.social/@mwenge}{\textcolor{blue}{Rob Hogan}}\\
 Dublin, 2023 - 2024 \\
 
 \clearpage
