Updates to print version

--- a/src/copyright.tex
+++ b/src/copyright.tex
@@ -12,7 +12,7 @@
 \begin{figure}[H]
     \centering
       \includegraphics[width=10cm]{src/bumph/sketch.png}%
-\caption*{Iinitial concept sketch for Iridis Alpha by Jeff Minter.}
+\caption*{Initial concept sketch for Iridis Alpha by Jeff Minter.}
 \end{figure}
 
 \vspace*{\fill}
