--- a/src/book.tex
+++ b/src/book.tex
@@ -32,7 +32,13 @@ pdfkeywords={C64, 6502, Llamasoft, Iridis Alpha, Jeff Minter}%
 \usepackage[hidelinks]{hyperref}
 \fi
 
+% Set up the marigins for print/pdf as appropriate.
+% We want a larger margin for the gutters in the print version.
+\ifx\forprint\undefined
 \usepackage[margin=1in]{geometry}                                       
+\else
+\usepackage[inner=1.4in,outer=0.8in]{geometry}                                       
+\fi
 \setlength\paperwidth{7.5in}                                            
   \setlength\paperheight{9.25in}                                        
  \setlength\textwidth{5.2in}                                            
