--- a/src/binary.tex
+++ b/src/binary.tex
@@ -2,7 +2,7 @@
 \lstset{style=6502Style}
 
 Here we are, ground zero in every book about assembly programming. Where the reader
-finds themselves in an awkdward sit-down discussion about the B word. It's a necessary evil
+finds themselves in an awkward sit-down discussion about the B word. It's a necessary evil
 of course. Nothing will ever make sense without a rudimentary but slowly developing
 grasp of what bytes are and why they keep being referred to in a confusing mixture
 of letters and numbers such as \icode{\$D012} and \icode{\$F4}.
@@ -10,8 +10,8 @@ of letters and numbers such as \icode{\$D012} and \icode{\$F4}.
 So what am I supposed to do with you here? Succeed where every other author has
 usually failed? I assume that's the expectation. OK here goes.
 
-You already know, OK maybe you already know, that computers, even those in the 
-1980s, understand everything in terms of 1s and 0s. All it knows is a world
+You already know (OK \textit{maybe} you already know) that computers, even those in the 
+1980s, understand everything in terms of 1s and 0s. All they know is a world
 in which something is on or off, high or low, present or absent. The reason
 for this is simply because yes/no and on/off are so fundamental to the reality
 of very small things. Once you break anything down far enough you are always
