--- a/src/copyright.tex
+++ b/src/copyright.tex
@@ -8,12 +8,6 @@
 \thispagestyle{empty}%
 
 \clearpage
-\vspace*{\fill}
-\begin{figure}[H]
-    \centering
-      \includegraphics[width=10cm]{src/bumph/sketch.png}%
-\caption*{Initial concept sketch for Iridis Alpha by Jeff Minter.}
-\end{figure}
 
 \vspace*{\fill}
 For my beloved wife Edna.\\
@@ -21,8 +15,17 @@ Thank you for your love and understanding.\\
 \bigskip
 \vspace*{\fill}
 
+\begin{minipage}[b]{0.48\linewidth}
 \textcopyright\ Rob Hogan \the\year{}, All Rights Reserved. \\
 \textbf{Edition Date:} \today
+\end{minipage}
+\begin{minipage}[b]{0.48\linewidth}
+\begin{figure}[H]
+    \centering
+      \includegraphics[width=4cm]{src/bumph/sketch.png}%
+\
+\end{figure}
+\end{minipage}
 
 \doclicenseThis
 \thispagestyle{empty}%
